[tool.poetry]
name = "lokkala"
version = "0.1.0"
description = ""
authors = ["Ishan1819 <ishanp141@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-adk = "^1.14.1"
cloudinary = "^1.44.1"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
fastapi = "^0.117.1"
pillow = "^11.3.0"
uvicorn = "^0.36.0"
google-generativeai = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
